--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
             android:supportsRtl="true"
             android:theme="@style/Theme.Storage"
             tools:targetApi="31">
+
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
@@ -30,6 +31,8 @@
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
+        <activity android:name=".InfraredActivity">
+        </activity>
         <service
                 android:name=".TileServiceActivity"
                 android:label="@string/infrared"
@@ -38,8 +41,6 @@
                 android:exported="true">
             <intent-filter>
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
-<!--                <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />-->
-<!--                <category android:name="android.intent.category.DEFAULT" />-->
             </intent-filter>
         </service>
     </application>
