--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,4 @@
+
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
@@ -6,7 +7,6 @@ plugins {
 android {
     namespace 'com.cohiiPad.storage'
     compileSdk 33
-
     defaultConfig {
         applicationId "com.cohiiPad.storage"
         minSdk 29
@@ -27,8 +27,8 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
-    kotlinOptions {
-        jvmTarget = '1.8'
+    viewBinding {
+        enabled = true
     }
     buildFeatures {
         viewBinding true
