--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
             android:dataExtractionRules="@xml/data_extraction_rules"
             android:fullBackupContent="@xml/backup_rules"
             android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
+            android:label="@string/ch_name"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/Theme.Storage"
@@ -18,7 +18,6 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
-                android:label="@string/app_name"
                 android:theme="@style/Theme.Storage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -31,7 +30,12 @@
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
-        <activity android:name=".InfraredActivity">
+        <activity android:name=".InfraredActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="com.cohiiPad.storage.ACTION_START" />
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="com.cohiiPad.storage.MY_CATEGORY" />
+            </intent-filter>
         </activity>
         <service
                 android:name=".TileServiceActivity"
@@ -39,9 +43,19 @@
                 android:icon="@drawable/endurance_3"
                 android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
                 android:exported="true">
-            <intent-filter>
-                <action android:name="android.service.quicksettings.action.QS_TILE" />
-            </intent-filter>
+                <intent-filter>
+                    <action android:name="android.service.quicksettings.action.QS_TILE" />
+                </intent-filter>
         </service>
+
+        <receiver android:name=".TileServiceActivity" android:exported="true">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+            </intent-filter>
+            <meta-data android:name="android.appwidget.provider"
+                       android:resource="@xml/example_appwidget_info" />
+        </receiver>
+
+
     </application>
 </manifest>
