--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,16 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
-                android:theme="@style/Theme.Storage">
+                android:theme="@style/Theme.Storage"
+        >
+
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.CREATE_SHORTCUT" />
                 <action android:name="android.service.quicksettings.action.QS_TILE" />
                 <action android:name="android.service.quicksettings.action.QS_TILE_PREFERENCES" />
                 <category android:name="android.intent.category.LAUNCHER"/>
+
             </intent-filter>
 
             <meta-data
@@ -48,14 +52,23 @@
                 </intent-filter>
         </service>
 
-        <receiver android:name=".TileServiceActivity" android:exported="true">
+<!--        <receiver android:name=".TileServiceActivity" android:exported="true">-->
+<!--            <intent-filter>-->
+<!--                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />-->
+<!--            </intent-filter>-->
+<!--            <meta-data android:name="android.appwidget.provider"-->
+<!--                       android:resource="@xml/example_appwidget_info" />-->
+<!--        </receiver>-->
+        <receiver
+                android:name=".LampBroadcastReceiver"
+                android:enabled="true"
+                android:exported="true"
+                android:permission="TODO"
+                tools:ignore="ExportedReceiver">
             <intent-filter>
-                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="com.cohii.storage.MY_BROADCAST"/>
             </intent-filter>
-            <meta-data android:name="android.appwidget.provider"
-                       android:resource="@xml/example_appwidget_info" />
         </receiver>
-
 
     </application>
 </manifest>
