--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,8 +18,7 @@
         <activity
                 android:name=".MainActivity"
                 android:exported="true"
-                android:theme="@style/Theme.Storage"
-        >
+                android:theme="@style/Theme.Storage">
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -34,22 +33,28 @@
                     android:name="android.app.lib_name"
                     android:value=""/>
         </activity>
+
         <activity android:name=".InfraredActivity" android:exported="true">
+
             <intent-filter>
                 <action android:name="com.cohiiPad.storage.ACTION_START" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="com.cohiiPad.storage.MY_CATEGORY" />
             </intent-filter>
+
         </activity>
+
         <service
                 android:name=".TileServiceActivity"
                 android:label="@string/infrared"
                 android:icon="@drawable/endurance_3"
                 android:permission="android.permission.BIND_QUICK_SETTINGS_TILE"
                 android:exported="true">
+
                 <intent-filter>
                     <action android:name="android.service.quicksettings.action.QS_TILE" />
                 </intent-filter>
+
         </service>
 
         <receiver
@@ -58,10 +63,13 @@
                 android:exported="true"
                 android:permission="TODO"
                 tools:ignore="ExportedReceiver">
+
             <intent-filter>
                 <action android:name="com.cohii.storage.MY_BROADCAST"/>
             </intent-filter>
+
         </receiver>
 
     </application>
+
 </manifest>
