--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,11 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.defaults.buildfeatures.buildconfig=true
+android.nonFinalResIds=false
+
+#Automatically convert third-party libraries to use AndroidX
+android.enableJetifier=true
+# ???????java.lang.NoClassDefFoundError: Failed resolution of: Landroid/support/v4/content/LocalBroadcastManager;
+# Android???????????????????????????AndroidX?
+
